Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
       <section id="main_content">
         <h1>
+<a id="geocluster" class="anchor" href="#geocluster" aria-hidden="true"><span class="octicon octicon-link"></span></a>geocluster</h1>
+
+<h1>
 <a id="welcome-to-geocluster-page" class="anchor" href="#welcome-to-geocluster-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to geocluster Page.</h1>
 
 <p>Geocluster is a repository that represent an example of a geoserver cluster. In other words , we will create multiple geoserver containers with the same configuration and a long balacing that switch from one geoserver to another.
